ANSIColor v2.0. - new deprecations and methods.
vicky_utils
- Added Plugin Hooking capabilities.